Add a package to make the code run correctly.
Add the report in html version.

--- a/mapping project.Rmd
+++ b/mapping project.Rmd
@@ -8,7 +8,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-pacman::p_load("tidyverse","hurricaneexposuredata","drat","maps","tmap","sp","sf")
+pacman::p_load("tidyverse","hurricaneexposuredata","drat","maps","tmap","sp","sf","viridis")
 ```
 
 ## 1 Data Cleaning
